Fix JavaFX entry point and resource path