@@ -4,7 +4,6 @@ import com.example.exceljson.jobs.JobRunner;
 import javafx.application.Application;
 
 public final class Main {
-
     public static void main(String[] args) {
         Integer jobStatus = maybeRunJob(args);
         if (jobStatus != null) {
@@ -14,18 +13,10 @@ public final class Main {
             return;
         }
 
-        // ✅ Launch JavaFX app explicitly targeting the Application subclass
         try {
             Application.launch(ExcelJsonApplication.class, args);
-        } catch (NoClassDefFoundError error) {
-            if (error.getMessage() != null && error.getMessage().startsWith("javafx/")) {
-                System.err.println("Unable to start Engage Rules Generator because JavaFX runtime classes are missing.");
-                System.err.println("If you are packaging the application, include the JavaFX modules, for example:");
-                System.err.println("  jpackage --java-options \"--add-modules=javafx.controls,javafx.fxml\" ...");
-                System.exit(1);
-                return;
-            }
-            throw error;
+        } catch (Exception e) {
+            e.printStackTrace();
         }
     }
 
